[package]
name = "soju"
version = "0.1.0"
authors = ["Dan Greco"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.58"
rayon = "1.5.3"
wasm-bindgen = "0.2.81"

[dependencies.web-sys]
version = "0.3.58"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'HtmlElement',
  'ResizeObserver',
  'ImageData',
]
